发布帖子功能完成

--- a/src/main/resources/static/html/ajaxdemo.html
+++ b/src/main/resources/static/html/ajaxdemo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p>
-        <input type="button" value="发生" onclick="send();">
+        <input type="button" value="发送" onclick="send();">
     </p>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script>
